# Emotions-System

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  INTERFACE_DESIGN.md  PRODUCT_SPEC.md  README.md  REQUIREMENTS_REFLECTION.md  config.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
adapters/: __init__.py  protocol_adapter.py
core/: __init__.py  interfaces.py  models.py
diagrams/: architecture.mmd
docs/: ARCHITECTURE_DESIGN.docx  EMOTION_TEST_CASES.md  FEASIBILITY_RESEARCH_REPORT.docx  INTERFACE_DATA_STRUCTURE_DESIGN.docx  PRODUCT_SPEC.docx  REQUIREMENTS_REFLECTION_REPORT.docx  WINDOWS_DEPLOYMENT_GUIDE.md
scripts/: setup_manus.sh  start.sh  start_windows.bat  start_windows.ps1
services/: __init__.py  action_parser.py  command_packager.py  fallback_inference_service.py  llm_service.py  orchestrator.py  sound_tag_converter.py  tts_service.py  voice_cloning_service.py
static/: index.html
tests/: __init__.py  coverage_report.txt  test_action_parser.py  test_command_packager.py  test_config.py  test_fallback_inference.py  test_llm_service.py  test_models.py  test_orchestrator.py  test_protocol_adapter.py  test_sound_tag_converter.py  test_tts_service.py  test_tts_service_extended.py  test_voice_cloning.py  test_voice_cloning_extended.py
tests/reports/: phase6_test_output.txt
