[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emotions-system"
version = "1.0.0"
description = "情感驱动的多模态语音合成系统 — 融合 Emotions-Express 与 CosyVoice"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Manus AI"},
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "openai>=1.6.0",
    "dashscope>=1.23.4",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "volcengine-python-sdk[ark]>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["core*", "services*", "adapters*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
